--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1 id="title">Nico's Superhero Rolodex</h1>
+        <h1 id="title">Madison's Superhero Site</h1>
+        <h2>Welcome to the Supersite! Find your favorite heroes, check out public lists, make your own and get started!</h2>
         <div id="searchOptions">
             <input type="text" id="searchBox" placeholder="Search here"> 
             <button type="button" id="searchBtn">Search</button>
@@ -61,12 +62,21 @@
                 <button id="confirmNameBtn">OK</button>
             </div>
         </div>
+
+        
         <div id="rowModal" class="modal">
             <!--Content of zoom here-->
         </div>
         <div id="publishersModal" class="modal">
             <!--Content of publishers here-->
         </div>
+
+
+        <div id = "backtoLogin">
+            <button id="btnLogin" type="button" class="BacktoLogin" >Return to User Settings</button>
+         </div>
+
         <script defer src="script.js"></script>
+
     </body>
 </html>
